--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   path_provider: ^2.1.0
   path: ^1.9.0
   file_picker: ^6.1.0
+  yaml: ^3.1.2
 
   # Navigation
   go_router: ^12.0.0
