--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -24,5 +24,15 @@ websockets>=12.0
 # Optional: ONNX Runtime (fallback)
 # onnxruntime-gpu>=1.16.0
 
+# Configuration (Phase 4 - Pydantic-based config)
+pydantic>=2.5
+pydantic-settings>=2.1
+
+# Testing (Phase 5 - Testing Sprint)
+pytest>=8.0
+pytest-asyncio>=0.23
+pytest-cov>=4.1
+hypothesis>=6.100
+
 # Utilities
 psutil>=5.9
