--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: g20_demo/backend
+        working-directory: backend
 
     steps:
       - uses: actions/checkout@v4
@@ -28,7 +28,7 @@ jobs:
         with:
           python-version: '3.10'
           cache: 'pip'
-          cache-dependency-path: g20_demo/backend/requirements.txt
+          cache-dependency-path: backend/requirements.txt
 
       - name: Install dependencies
         run: |
@@ -52,7 +52,7 @@ jobs:
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
         with:
-          files: g20_demo/backend/coverage.xml
+          files: backend/coverage.xml
           flags: backend
           fail_ci_if_error: false
 
@@ -61,10 +61,6 @@ jobs:
   # ==============================================================
   flutter-tests:
     runs-on: ubuntu-latest
-
-    defaults:
-      run:
-        working-directory: g20_demo
 
     steps:
       - uses: actions/checkout@v4
@@ -89,7 +85,7 @@ jobs:
         uses: codecov/codecov-action@v4
         if: always()
         with:
-          files: g20_demo/coverage/lcov.info
+          files: coverage/lcov.info
           flags: flutter
           fail_ci_if_error: false
 
@@ -110,7 +106,6 @@ jobs:
           channel: 'stable'
 
       - name: Build Linux (check compilation)
-        working-directory: g20_demo
         run: |
           flutter pub get
           flutter build linux --release || echo "Linux build requires additional deps"
