--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,12 +47,12 @@ jobs:
             --cov-report=xml \
             --cov-report=term-missing \
             --cov-fail-under=25 \
-            -v --tb=short \
-            --ignore=tests/test_smoke.py::TestServerIntegration::test_websocket_connection
+            -v --tb=short
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           files: backend/coverage.xml
           flags: backend
           fail_ci_if_error: false
@@ -86,6 +86,7 @@ jobs:
         uses: codecov/codecov-action@v4
         if: always()
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           files: coverage/lcov.info
           flags: flutter
           fail_ci_if_error: false
