--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,28 +1,45 @@
-# This file configures the analyzer, which statically analyzes Dart code to
-# check for errors, warnings, and lints.
-#
-# The issues identified by the analyzer are surfaced in the UI of Dart-enabled
-# IDEs (https://dart.dev/tools#ides-and-editors). The analyzer can also be
-# invoked from the command line by running `flutter analyze`.
-
-# The following line activates a set of recommended lints for Flutter apps,
-# packages, and plugins designed to encourage good coding practices.
+# Dart analyzer configuration for G20
 include: package:flutter_lints/flutter.yaml
 
-linter:
-  # The lint rules applied to this project can be customized in the
-  # section below to disable rules from the `package:flutter_lints/flutter.yaml`
-  # included above or to enable additional rules. A list of all available lints
-  # and their documentation is published at https://dart.dev/lints.
-  #
-  # Instead of disabling a lint rule for the entire project in the
-  # section below, it can also be suppressed for a single line of code
-  # or a specific dart file by using the `// ignore: name_of_lint` and
-  # `// ignore_for_file: name_of_lint` syntax on the line or in the file
-  # producing the lint.
-  rules:
-    # avoid_print: false  # Uncomment to disable the `avoid_print` rule
-    # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
+analyzer:
+  # Only fail on errors, not warnings or info
+  errors:
+    # Treat these as info (don't fail CI)
+    unused_import: info
+    unused_element: info
+    unused_field: info
+    unused_local_variable: info
+    deprecated_member_use: info
+    invalid_use_of_protected_member: info
+    invalid_use_of_visible_for_testing_member: info
+    prefer_const_constructors: ignore
+    prefer_const_literals_to_create_immutables: ignore
+    prefer_const_declarations: ignore
+    unnecessary_import: info
+    unnecessary_null_comparison: info
+    unnecessary_non_null_assertion: info
+    dead_null_aware_expression: info
+    dangling_library_doc_comments: ignore
+    unnecessary_brace_in_string_interps: ignore
+    unnecessary_string_interpolations: ignore
+    avoid_print: ignore
+    depend_on_referenced_packages: info
+    use_build_context_synchronously: info
+    body_might_complete_normally_catch_error: warning
+    prefer_final_fields: ignore
 
-# Additional information about this file can be found at
-# https://dart.dev/guides/language/analysis-options
+  exclude:
+    - "**/*.g.dart"
+    - "**/*.freezed.dart"
+    - "**/generated/**"
+
+linter:
+  rules:
+    # Disable overly strict rules
+    avoid_print: false
+    prefer_const_constructors: false
+    prefer_const_literals_to_create_immutables: false
+    prefer_const_declarations: false
+    prefer_final_fields: false
+    unnecessary_brace_in_string_interps: false
+    dangling_library_doc_comments: false
