--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -88,7 +88,7 @@ jobs:
         run: flutter pub get
 
       - name: Run Dart analyzer
-        run: dart analyze lib/ --fatal-infos=false --fatal-warnings=false
+        run: dart analyze lib/ --no-fatal-warnings
 
       - name: Run Flutter tests
         run: flutter test --coverage || true  # Don't fail if no tests yet
